--- a/src/partials/_mixins.scss
+++ b/src/partials/_mixins.scss
@@ -283,6 +283,18 @@
 	}
 }
 
+@mixin hiddenLabel {
+	border: 0;
+	clip: rect(0, 0, 0, 0);
+	height: 1px;
+	padding: 0;
+	margin: -1px;
+	overflow: hidden;
+	position: absolute;
+	white-space: nowrap;
+	width: 1px;
+}
+
 @mixin formTall {
 	@include form;
 	overflow-y: scroll !important;
